# example-rust-worker

./: .gitignore  Cargo.toml  README.md  index.js  package.json  webpack.config.js
src/: lib.rs
worker/: router.js  worker.js
